--- a/sakura.ini
+++ b/sakura.ini
@@ -1,284 +1,304 @@
 ﻿; sakura.ini テキストエディタ設定ファイル
 
 [MRU]
-MRUFOLDER[00]=Y:\usr\local\sakura\keyword\
+MRUFOLDER[00]=Y:\usr\local\sakura\kwd\sh\
 MRUFOLDER[00].bFavorite=0
-MRUFOLDER[01]=Y:\usr\local\sakura\kwd\html\
+MRUFOLDER[01]=Y:\usr\local\sakura\keyword\
 MRUFOLDER[01].bFavorite=0
-MRUFOLDER[02]=Y:\usr\local\sakura\kwd\bat\
+MRUFOLDER[02]=Y:\usr\local\sakura\kwd\html\
 MRUFOLDER[02].bFavorite=0
-MRUFOLDER[03]=Y:\usr\local\sakura\kwd\VB\
+MRUFOLDER[03]=Y:\usr\local\sakura\kwd\bat\
 MRUFOLDER[03].bFavorite=0
-MRUFOLDER[04]=Y:\usr\local\bin\ccore_bak2\src\
+MRUFOLDER[04]=Y:\usr\local\sakura\kwd\VB\
 MRUFOLDER[04].bFavorite=0
-MRUFOLDER[05]=Y:\usr\local\sakura\kwd\cpp\
+MRUFOLDER[05]=Y:\usr\local\bin\ccore_bak2\src\
 MRUFOLDER[05].bFavorite=0
-MRUFOLDER[06]=Y:\usr\local\sakura\
+MRUFOLDER[06]=Y:\usr\local\sakura\kwd\cpp\
 MRUFOLDER[06].bFavorite=0
+MRUFOLDER[07]=Y:\usr\local\sakura\
+MRUFOLDER[07].bFavorite=0
 MRU[00].bFavorite=0
 MRU[00].nCharCode=0
 MRU[00].nType=16
 MRU[00].nViewLeftCol=0
-MRU[00].nViewTopLine=212
+MRU[00].nViewTopLine=14
 MRU[00].nX=0
-MRU[00].nY=0
+MRU[00].nY=40
 MRU[00].szMark2=:0
-MRU[00].szPath=Y:\usr\local\sakura\keyword\tsql.kwd
+MRU[00].szPath=Y:\usr\local\sakura\kwd\sh\kw1_defines.kwd
 MRU[01].bFavorite=0
 MRU[01].nCharCode=0
 MRU[01].nType=16
 MRU[01].nViewLeftCol=0
-MRU[01].nViewTopLine=300
-MRU[01].nX=0
-MRU[01].nY=0
+MRU[01].nViewTopLine=80
+MRU[01].nX=6
+MRU[01].nY=8
 MRU[01].szMark2=:0
-MRU[01].szPath=Y:\usr\local\sakura\keyword\CSS2.input.kwd
+MRU[01].szPath=Y:\usr\local\sakura\keyword\SHELL.kwd
 MRU[02].bFavorite=0
 MRU[02].nCharCode=0
 MRU[02].nType=16
 MRU[02].nViewLeftCol=0
-MRU[02].nViewTopLine=373
-MRU[02].nX=2
-MRU[02].nY=398
+MRU[02].nViewTopLine=212
+MRU[02].nX=0
+MRU[02].nY=0
 MRU[02].szMark2=:0
-MRU[02].szPath=Y:\usr\local\sakura\keyword\css2.1.kwd
+MRU[02].szPath=Y:\usr\local\sakura\keyword\tsql.kwd
 MRU[03].bFavorite=0
 MRU[03].nCharCode=0
 MRU[03].nType=16
 MRU[03].nViewLeftCol=0
-MRU[03].nViewTopLine=400
-MRU[03].nX=5
-MRU[03].nY=411
+MRU[03].nViewTopLine=300
+MRU[03].nX=0
+MRU[03].nY=0
 MRU[03].szMark2=:0
-MRU[03].szPath=Y:\usr\local\sakura\keyword\JavaScript.kwd
+MRU[03].szPath=Y:\usr\local\sakura\keyword\CSS2.input.kwd
 MRU[04].bFavorite=0
-MRU[04].nCharCode=4
+MRU[04].nCharCode=0
 MRU[04].nType=16
 MRU[04].nViewLeftCol=0
-MRU[04].nViewTopLine=0
-MRU[04].nX=1
-MRU[04].nY=14
+MRU[04].nViewTopLine=373
+MRU[04].nX=2
+MRU[04].nY=398
 MRU[04].szMark2=:0
-MRU[04].szPath=Y:\usr\local\sakura\keyword\html5.kwd
+MRU[04].szPath=Y:\usr\local\sakura\keyword\css2.1.kwd
 MRU[05].bFavorite=0
-MRU[05].nCharCode=4
+MRU[05].nCharCode=0
 MRU[05].nType=16
 MRU[05].nViewLeftCol=0
-MRU[05].nViewTopLine=0
-MRU[05].nX=6
-MRU[05].nY=18
+MRU[05].nViewTopLine=400
+MRU[05].nX=5
+MRU[05].nY=411
 MRU[05].szMark2=:0
-MRU[05].szPath=Y:\usr\local\sakura\kwd\html\kw1_defines.kwd
+MRU[05].szPath=Y:\usr\local\sakura\keyword\JavaScript.kwd
 MRU[06].bFavorite=0
-MRU[06].nCharCode=0
+MRU[06].nCharCode=4
 MRU[06].nType=16
 MRU[06].nViewLeftCol=0
-MRU[06].nViewTopLine=298
-MRU[06].nX=4
-MRU[06].nY=310
+MRU[06].nViewTopLine=0
+MRU[06].nX=1
+MRU[06].nY=14
 MRU[06].szMark2=:0
-MRU[06].szPath=Y:\usr\local\sakura\keyword\html.kwd
+MRU[06].szPath=Y:\usr\local\sakura\keyword\html5.kwd
 MRU[07].bFavorite=0
 MRU[07].nCharCode=4
 MRU[07].nType=16
 MRU[07].nViewLeftCol=0
-MRU[07].nViewTopLine=130
-MRU[07].nX=5
-MRU[07].nY=156
+MRU[07].nViewTopLine=0
+MRU[07].nX=6
+MRU[07].nY=18
 MRU[07].szMark2=:0
-MRU[07].szPath=Y:\usr\local\sakura\kwd\html\kw2_reserved_words.kwd
+MRU[07].szPath=Y:\usr\local\sakura\kwd\html\kw1_defines.kwd
 MRU[08].bFavorite=0
-MRU[08].nCharCode=4
+MRU[08].nCharCode=0
 MRU[08].nType=16
 MRU[08].nViewLeftCol=0
-MRU[08].nViewTopLine=25
-MRU[08].nX=0
-MRU[08].nY=51
+MRU[08].nViewTopLine=298
+MRU[08].nX=4
+MRU[08].nY=310
 MRU[08].szMark2=:0
-MRU[08].szPath=Y:\usr\local\sakura\kwd\html\kw3_types.kwd
+MRU[08].szPath=Y:\usr\local\sakura\keyword\html.kwd
 MRU[09].bFavorite=0
 MRU[09].nCharCode=4
-MRU[09].nType=0
+MRU[09].nType=16
 MRU[09].nViewLeftCol=0
-MRU[09].nViewTopLine=0
-MRU[09].nX=0
-MRU[09].nY=0
+MRU[09].nViewTopLine=130
+MRU[09].nX=5
+MRU[09].nY=156
 MRU[09].szMark2=:0
-MRU[09].szPath=Y:\usr\local\sakura\kwd\html\reg1_variables.rkw
+MRU[09].szPath=Y:\usr\local\sakura\kwd\html\kw2_reserved_words.kwd
 MRU[10].bFavorite=0
-MRU[10].nCharCode=0
-MRU[10].nType=0
+MRU[10].nCharCode=4
+MRU[10].nType=16
 MRU[10].nViewLeftCol=0
-MRU[10].nViewTopLine=0
-MRU[10].nX=47
-MRU[10].nY=8
+MRU[10].nViewTopLine=25
+MRU[10].nX=0
+MRU[10].nY=51
 MRU[10].szMark2=:0
-MRU[10].szPath=Y:\usr\local\sakura\kwd\bat\bat_win2k.khp
+MRU[10].szPath=Y:\usr\local\sakura\kwd\html\kw3_types.kwd
 MRU[11].bFavorite=0
-MRU[11].nCharCode=0
-MRU[11].nType=16
+MRU[11].nCharCode=4
+MRU[11].nType=0
 MRU[11].nViewLeftCol=0
-MRU[11].nViewTopLine=42
-MRU[11].nX=7
-MRU[11].nY=61
+MRU[11].nViewTopLine=0
+MRU[11].nX=0
+MRU[11].nY=0
 MRU[11].szMark2=:0
-MRU[11].szPath=Y:\usr\local\sakura\keyword\batch.kwd
+MRU[11].szPath=Y:\usr\local\sakura\kwd\html\reg1_variables.rkw
 MRU[12].bFavorite=0
 MRU[12].nCharCode=0
 MRU[12].nType=0
 MRU[12].nViewLeftCol=0
-MRU[12].nViewTopLine=27
-MRU[12].nX=0
-MRU[12].nY=52
+MRU[12].nViewTopLine=0
+MRU[12].nX=47
+MRU[12].nY=8
 MRU[12].szMark2=:0
-MRU[12].szPath=Y:\usr\local\sakura\kwd\bat\bat.khp
+MRU[12].szPath=Y:\usr\local\sakura\kwd\bat\bat_win2k.khp
 MRU[13].bFavorite=0
-MRU[13].nCharCode=4
+MRU[13].nCharCode=0
 MRU[13].nType=16
 MRU[13].nViewLeftCol=0
-MRU[13].nViewTopLine=0
-MRU[13].nX=0
-MRU[13].nY=0
+MRU[13].nViewTopLine=42
+MRU[13].nX=7
+MRU[13].nY=61
 MRU[13].szMark2=:0
-MRU[13].szPath=Y:\usr\local\sakura\kwd\bat\kw2_reserved_words.kwd
+MRU[13].szPath=Y:\usr\local\sakura\keyword\batch.kwd
 MRU[14].bFavorite=0
-MRU[14].nCharCode=4
+MRU[14].nCharCode=0
 MRU[14].nType=0
 MRU[14].nViewLeftCol=0
-MRU[14].nViewTopLine=0
-MRU[14].nX=4
-MRU[14].nY=1
+MRU[14].nViewTopLine=27
+MRU[14].nX=0
+MRU[14].nY=52
 MRU[14].szMark2=:0
-MRU[14].szPath=Y:\usr\local\sakura\kwd\bat\reg1_variables.rkw
+MRU[14].szPath=Y:\usr\local\sakura\kwd\bat\bat.khp
 MRU[15].bFavorite=0
 MRU[15].nCharCode=4
 MRU[15].nType=16
 MRU[15].nViewLeftCol=0
 MRU[15].nViewTopLine=0
-MRU[15].nX=11
-MRU[15].nY=9
+MRU[15].nX=0
+MRU[15].nY=0
 MRU[15].szMark2=:0
-MRU[15].szPath=Y:\usr\local\sakura\kwd\bat\kw1_defines.kwd
+MRU[15].szPath=Y:\usr\local\sakura\kwd\bat\kw2_reserved_words.kwd
 MRU[16].bFavorite=0
 MRU[16].nCharCode=4
-MRU[16].nType=16
+MRU[16].nType=0
 MRU[16].nViewLeftCol=0
 MRU[16].nViewTopLine=0
-MRU[16].nX=0
+MRU[16].nX=4
 MRU[16].nY=1
 MRU[16].szMark2=:0
-MRU[16].szPath=Y:\usr\local\sakura\kwd\VB\kw2_reserved_words.kwd
+MRU[16].szPath=Y:\usr\local\sakura\kwd\bat\reg1_variables.rkw
 MRU[17].bFavorite=0
-MRU[17].nCharCode=0
-MRU[17].nType=0
+MRU[17].nCharCode=4
+MRU[17].nType=16
 MRU[17].nViewLeftCol=0
 MRU[17].nViewTopLine=0
-MRU[17].nX=0
-MRU[17].nY=0
+MRU[17].nX=11
+MRU[17].nY=9
 MRU[17].szMark2=:0
-MRU[17].szPath=Y:\usr\local\sakura\keyword\bat_win2k.khp
+MRU[17].szPath=Y:\usr\local\sakura\kwd\bat\kw1_defines.kwd
 MRU[18].bFavorite=0
-MRU[18].nCharCode=0
-MRU[18].nType=0
+MRU[18].nCharCode=4
+MRU[18].nType=16
 MRU[18].nViewLeftCol=0
 MRU[18].nViewTopLine=0
 MRU[18].nX=0
-MRU[18].nY=0
+MRU[18].nY=1
 MRU[18].szMark2=:0
-MRU[18].szPath=Y:\usr\local\sakura\keyword\bat.khp
+MRU[18].szPath=Y:\usr\local\sakura\kwd\VB\kw2_reserved_words.kwd
 MRU[19].bFavorite=0
 MRU[19].nCharCode=0
-MRU[19].nType=16
+MRU[19].nType=0
 MRU[19].nViewLeftCol=0
-MRU[19].nViewTopLine=8
+MRU[19].nViewTopLine=0
 MRU[19].nX=0
 MRU[19].nY=0
 MRU[19].szMark2=:0
-MRU[19].szPath=Y:\usr\local\sakura\keyword\vb_asp.kwd
+MRU[19].szPath=Y:\usr\local\sakura\keyword\bat_win2k.khp
 MRU[20].bFavorite=0
-MRU[20].nCharCode=4
-MRU[20].nType=16
+MRU[20].nCharCode=0
+MRU[20].nType=0
 MRU[20].nViewLeftCol=0
-MRU[20].nViewTopLine=61
-MRU[20].nX=7
-MRU[20].nY=86
+MRU[20].nViewTopLine=0
+MRU[20].nX=0
+MRU[20].nY=0
 MRU[20].szMark2=:0
-MRU[20].szPath=Y:\usr\local\sakura\kwd\VB\kw1_defines.kwd
+MRU[20].szPath=Y:\usr\local\sakura\keyword\bat.khp
 MRU[21].bFavorite=0
 MRU[21].nCharCode=0
 MRU[21].nType=16
 MRU[21].nViewLeftCol=0
-MRU[21].nViewTopLine=0
-MRU[21].nX=3
-MRU[21].nY=31
+MRU[21].nViewTopLine=8
+MRU[21].nX=0
+MRU[21].nY=0
 MRU[21].szMark2=:0
-MRU[21].szPath=Y:\usr\local\sakura\keyword\VBScript.kwd
+MRU[21].szPath=Y:\usr\local\sakura\keyword\vb_asp.kwd
 MRU[22].bFavorite=0
-MRU[22].nCharCode=0
+MRU[22].nCharCode=4
 MRU[22].nType=16
 MRU[22].nViewLeftCol=0
-MRU[22].nViewTopLine=121
-MRU[22].nX=0
-MRU[22].nY=128
+MRU[22].nViewTopLine=61
+MRU[22].nX=7
+MRU[22].nY=86
 MRU[22].szMark2=:0
-MRU[22].szPath=Y:\usr\local\sakura\keyword\VB.KWD
+MRU[22].szPath=Y:\usr\local\sakura\kwd\VB\kw1_defines.kwd
 MRU[23].bFavorite=0
 MRU[23].nCharCode=0
 MRU[23].nType=16
 MRU[23].nViewLeftCol=0
-MRU[23].nViewTopLine=174
-MRU[23].nX=4
-MRU[23].nY=202
+MRU[23].nViewTopLine=0
+MRU[23].nX=3
+MRU[23].nY=31
 MRU[23].szMark2=:0
-MRU[23].szPath=Y:\usr\local\sakura\keyword\vb2.kwd
+MRU[23].szPath=Y:\usr\local\sakura\keyword\VBScript.kwd
 MRU[24].bFavorite=0
-MRU[24].nCharCode=4
-MRU[24].nType=2
+MRU[24].nCharCode=0
+MRU[24].nType=16
 MRU[24].nViewLeftCol=0
-MRU[24].nViewTopLine=672
-MRU[24].nX=5
-MRU[24].nY=623
+MRU[24].nViewTopLine=121
+MRU[24].nX=0
+MRU[24].nY=128
 MRU[24].szMark2=:0
-MRU[24].szPath=Y:\usr\local\bin\ccore_bak2\src\ccore.cpp
+MRU[24].szPath=Y:\usr\local\sakura\keyword\VB.KWD
 MRU[25].bFavorite=0
-MRU[25].nCharCode=4
+MRU[25].nCharCode=0
 MRU[25].nType=16
 MRU[25].nViewLeftCol=0
-MRU[25].nViewTopLine=8
-MRU[25].nX=6
-MRU[25].nY=25
+MRU[25].nViewTopLine=174
+MRU[25].nX=4
+MRU[25].nY=202
 MRU[25].szMark2=:0
-MRU[25].szPath=Y:\usr\local\sakura\kwd\cpp\kw3_types.kwd
+MRU[25].szPath=Y:\usr\local\sakura\keyword\vb2.kwd
 MRU[26].bFavorite=0
 MRU[26].nCharCode=4
-MRU[26].nType=16
+MRU[26].nType=2
 MRU[26].nViewLeftCol=0
-MRU[26].nViewTopLine=57
-MRU[26].nX=0
-MRU[26].nY=0
+MRU[26].nViewTopLine=672
+MRU[26].nX=5
+MRU[26].nY=623
 MRU[26].szMark2=:0
-MRU[26].szPath=Y:\usr\local\sakura\kwd\cpp\cpp.ini
+MRU[26].szPath=Y:\usr\local\bin\ccore_bak2\src\ccore.cpp
 MRU[27].bFavorite=0
 MRU[27].nCharCode=4
-MRU[27].nType=0
+MRU[27].nType=16
 MRU[27].nViewLeftCol=0
-MRU[27].nViewTopLine=0
-MRU[27].nX=0
-MRU[27].nY=0
+MRU[27].nViewTopLine=8
+MRU[27].nX=6
+MRU[27].nY=25
 MRU[27].szMark2=:0
-MRU[27].szPath=Y:\usr\local\sakura\sakura.keywordset.csv
+MRU[27].szPath=Y:\usr\local\sakura\kwd\cpp\kw3_types.kwd
 MRU[28].bFavorite=0
 MRU[28].nCharCode=4
 MRU[28].nType=16
 MRU[28].nViewLeftCol=0
-MRU[28].nViewTopLine=0
+MRU[28].nViewTopLine=57
 MRU[28].nX=0
 MRU[28].nY=0
 MRU[28].szMark2=:0
-MRU[28].szPath=Y:\usr\local\sakura\sakura.ini
+MRU[28].szPath=Y:\usr\local\sakura\kwd\cpp\cpp.ini
+MRU[29].bFavorite=0
+MRU[29].nCharCode=4
+MRU[29].nType=0
+MRU[29].nViewLeftCol=0
+MRU[29].nViewTopLine=0
+MRU[29].nX=0
+MRU[29].nY=0
+MRU[29].szMark2=:0
+MRU[29].szPath=Y:\usr\local\sakura\sakura.keywordset.csv
+MRU[30].bFavorite=0
+MRU[30].nCharCode=4
+MRU[30].nType=16
+MRU[30].nViewLeftCol=0
+MRU[30].nViewTopLine=0
+MRU[30].nX=0
+MRU[30].nY=0
+MRU[30].szMark2=:0
+MRU[30].szPath=Y:\usr\local\sakura\sakura.ini
 _ExceptMRU_Counts=0
-_MRUFOLDER_Counts=7
-_MRU_Counts=29
+_MRUFOLDER_Counts=8
+_MRU_Counts=31
 
 [Keys]
 REPLACEKEY[00]=\r\n
@@ -303,7 +323,7 @@ _GREPFILE_Counts=1
 _GREPFOLDER_Counts=0
 
 [Folders]
-szIMPORTFOLDER=Y:\usr\local\sakura\keyword\
+szIMPORTFOLDER=Y:\usr\local\sakura\kwd\sh\
 szMACROFOLDER=Y:\usr\local\sakura\
 
 [Cmd]
@@ -1186,7 +1206,7 @@ m_bTagJumpICase=0
 nDiffFlgOpt=0
 nExecFlgOpt=1
 nTagsOpt=0
-nTypesCount=20
+nTypesCount=21
 szTagsCmdLine=
 szVersion=2.4.1.2849
 vStructureVersion=176
@@ -4455,6 +4475,169 @@ szTypeExts=css
 szTypeName=CSS
 xyOutlineDock=0,0,0,0
 
+[Types(20)]
+C[BRC]=1,1,4080ff,2a2a2a,0
+C[CAR]=1,0,fffff4,2a2a2a,0
+C[CBK]=0,0,fffff4,80ffff,0
+C[CMT]=1,0,808080,2a2a2a,0
+C[CTL]=1,0,c0c0c0,2a2a2a,0
+C[CVL]=0,0,ff8080,2a2a2a,0
+C[DFA]=1,0,808000,77f7f0,0
+C[DFC]=1,0,80ff80,408000,0
+C[DFD]=1,0,ffffff,400080,0
+C[EBK]=0,0,fffff4,f3f3f3,0
+C[EOF]=1,0,c0c0c0,2a2a2a,0
+C[EOL]=1,0,808080,2a2a2a,0
+C[FN2]=1,0,fffff4,0080ff,0
+C[FN3]=1,0,000000,00ff80,0
+C[FN4]=1,0,000000,9999ff,0
+C[FN5]=1,0,000000,ff66ff,0
+C[FND]=1,0,000000,4080ff,0
+C[HDC]=1,0,0159a9,2a2a2a,0
+C[IME]=1,0,0000ff,2a2a2a,0
+C[KW1]=1,0,c080ff,2a2a2a,0
+C[KW2]=1,0,d9865e,2a2a2a,0
+C[KW3]=1,0,4e9b00,2a2a2a,0
+C[KW4]=1,0,80ffff,2a2a2a,0
+C[KW5]=1,0,77f7f0,2a2a2a,0
+C[KW6]=1,0,0080ff,2a2a2a,0
+C[KW7]=1,0,0080ff,2a2a2a,0
+C[KW8]=1,0,0080ff,2a2a2a,0
+C[KW9]=1,0,0080ff,2a2a2a,0
+C[KWA]=1,0,0080ff,2a2a2a,0
+C[LNO]=1,1,c0c0c0,2a2a2a,0
+C[MOD]=1,1,fffff4,2a2a2a,0
+C[MRK]=1,0,b9592b,2a2a2a,0
+C[NOT]=0,0,ffc0c0,2a2a2a,0
+C[NUM]=1,0,80ffff,2a2a2a,0
+C[PGV]=0,0,f0fbff,ffe6be,0
+C[RAP]=1,0,808080,2a2a2a,0
+C[RK1]=1,0,ffff80,2a2a2a,0
+C[RK2]=1,0,00c800,2a2a2a,0
+C[RK3]=1,0,80ffff,2a2a2a,0
+C[RK4]=1,0,ff0000,2a2a2a,0
+C[RK5]=1,0,ff0000,2a2a2a,0
+C[RK6]=1,0,ff0000,2a2a2a,0
+C[RK7]=1,0,ff0000,2a2a2a,0
+C[RK8]=1,0,ff0000,2a2a2a,0
+C[RK9]=1,0,ff0000,2a2a2a,0
+C[RKA]=1,0,ff0000,2a2a2a,0
+C[RUL]=1,0,c0c0c0,2a2a2a,0
+C[SEL]=1,0,ffffff,d78a5b,0
+C[SPC]=0,0,808080,2a2a2a,0
+C[SQT]=1,0,0159a9,2a2a2a,0
+C[TAB]=1,0,808080,2a2a2a,0
+C[TXT]=1,0,fffff4,2a2a2a,0
+C[UND]=1,0,ffff80,2a2a2a,0
+C[URL]=1,0,c08000,2a2a2a,1
+C[VER]=0,0,c0c0c0,2a2a2a,0
+C[WQT]=1,0,0159a9,2a2a2a,0
+C[ZEN]=1,0,808080,2a2a2a,0
+FileTree(0).bIgnoreHidden=1
+FileTree(0).bIgnoreReadOny=0
+FileTree(0).bIgnoreSystem=0
+FileTree(0).eItemType=0
+FileTree(0).nDepth=0
+FileTree(0).szTargetFile=*.*
+FileTree(0).szTargetPath=.
+RxKey[000]=RK1,/\$\{?[A-Za-z][^\s\}]+/k
+bAutoIndent=1
+bAutoIndent_ZENSPACE=0
+bChkEnterAtEnd=1
+bDefaultBom=0
+bFileTreeProject=1
+bHokanLoHiCase=0
+bIndentCppCommentIgnore=1
+bIndentCppStringIgnore=1
+bIndentCppUndoSep=0
+bInsSpace=1
+bKinsokuHead=0
+bKinsokuHide=0
+bKinsokuKuto=0
+bKinsokuRet=0
+bKinsokuTail=0
+bOutlineDockDisp=0
+bOutlineSortDesc=0
+bPriorCesu8=0
+bRTrimPrevLine=0
+bStringEndLine=0
+bStringLineOnly=1
+bTabArrow=0
+bTypeHtmlHelpIsSingle=1
+bUseDocumentIcon=0
+bUseHokanByFile=1
+bUseHokanByKeyword=0
+bUseKeyHelpAllSearch=0
+bUseKeyHelpKeyDisp=0
+bUseKeyHelpPrefix=0
+bUseKeyWordHelp=0
+bUseRegexKeyword=0
+bUseTypeFont=0
+bgImgOpacity=255
+bgImgPath=
+bgImgPos=0
+bgImgPosOffsetX=0
+bgImgPosOffsetY=0
+bgImgRepeartX=1
+bgImgRepeartY=1
+bgImgScrollX=1
+bgImgScrollY=1
+cLineTermChar=:
+eDefaultCodetype=4
+eDefaultEoltype=2
+eOutlineDockSide=0
+id=283180001
+lf=0,0,0,0,0,0,0,0,0,0,0,0,0
+lfFaceName=
+nDefaultOutline=13
+nDockOutline=0
+nFileTreeItemCount=1
+nHokanType=0
+nImeState=0
+nIndentLayout=0
+nInts=20,10240,0,2,48,49,0,1,1,0,0,0
+nKeyHelpRMenuShowType=1
+nKeywordSelect10=-1
+nKeywordSelect3=50
+nKeywordSelect4=-1
+nKeywordSelect5=-1
+nKeywordSelect6=-1
+nKeywordSelect7=-1
+nKeywordSelect8=-1
+nKeywordSelect9=-1
+nLineCommentColumn=-1
+nLineCommentColumn2=-1
+nLineCommentColumn3=-1
+nLineNumWidth=2
+nLineSpace=1
+nNoteLineOffset=0
+nOutlineSortCol=0
+nOutlineSortType=0
+nPointSize=0
+nSmartIndent=0
+nTextWrapMethod=0
+nVertLineIdx1=0
+szBlockCommentFrom=
+szBlockCommentFrom2=
+szBlockCommentTo=
+szBlockCommentTo2=
+szExtHelp=
+szExtHtmlHelp=
+szFileTreeProjectIni=
+szHokanFile=
+szIndentChars=
+szKinsokuHead=
+szKinsokuKuto=、。，．､｡,.
+szKinsokuTail=
+szLineComment=#
+szLineComment2=
+szLineComment3=
+szOutlineRuleFilename=
+szTabViewString=^       
+szTypeExts=sh,ksh,bash,zsh,csh
+szTypeName=Shell
+xyOutlineDock=0,0,0,0
+
 [KeyWords]
 nCASE[00]=0
 nCASE[01]=1
@@ -4504,7 +4687,10 @@ nCASE[44]=0
 nCASE[45]=0
 nCASE[46]=0
 nCASE[47]=0
-nCurrentKeyWordSetIdx=6
+nCASE[48]=0
+nCASE[49]=0
+nCASE[50]=0
+nCurrentKeyWordSetIdx=50
 nKWN[00]=18
 nKWN[01]=90
 nKWN[02]=44
@@ -4553,7 +4739,10 @@ nKWN[44]=0
 nKWN[45]=861
 nKWN[46]=0
 nKWN[47]=0
-nKeyWordSetNum=48
+nKWN[48]=39
+nKWN[49]=57
+nKWN[50]=0
+nKeyWordSetNum=51
 szKW[00]=#define	#elif	#else	#endif	#error	#if	#ifdef	#ifndef	#include	#line	#pragma	#undef	catch	finally	return	throw	try	using	
 szKW[00].Size=121
 szKW[01]=NULL	__FILE__	__declspec	alignas	alignof	and	and_eq	asm	auto	bitand	bitor	bool	break	case	catch	char	class	compl	const	const_cast	constexpr	continue	decltype	default	delete	do	double	dynamic_cast	elif	else	endif	enum	error	explicit	export	extern	false	final	float	for	friend	goto	if	ifdef	ifndef	include	inline	int	line	long	mutable	namespace	new	noexcept	not	not_eq	nullptr	operator	or	or_eq	override	pragma	private	protected	public	register	reinterpret_cast	short	signed	sizeof	static	static_assert	static_cast	struct	switch	template	this	thread_local	true	typedef	typeid	typename	union	virtual	void	volatile	wchar_t	while	xor	xor_eq	
@@ -4650,6 +4839,12 @@ szKW[46]=
 szKW[46].Size=1
 szKW[47]=
 szKW[47].Size=1
+szKW[48]=alias	break	case	continue	do	done	echo	elif	else	end	endif	esac	eval	exec	exit	export	fi	for	foreach	function	goto	if	in	nohup	return	set	setenv	sh	sleep	source	switch	then	umask	unalias	unset	unsetenv	until	wait	while	
+szKW[48].Size=220
+szKW[49]=argv	autologout	bg	breaksw	cd	cdpath	chdir	csh	cwd	default	dirs	endsw	fg	glob	hash	hashstat	history	home	ignoreeof	jobs	kill	limit	login	logout	mail	newgrp	nice	noclobber	noglob	nonomatch	notify	onintr	passwd	path	popd	prompt	pushd	putenv	pwd	readonly	rehash	repeat	savehist	shell	shift	status	stop	suspend	term	test	time	times	trap	type	ulimit	user	verbose	
+szKW[49].Size=359
+szKW[50]=
+szKW[50].Size=1
 szSN[00]=C/C++_1
 szSN[01]=C/C++_2
 szSN[02]=C/C++_3
@@ -4698,6 +4893,9 @@ szSN[44]=yml_3
 szSN[45]=CSS_1
 szSN[46]=CSS_2
 szSN[47]=CSS_3
+szSN[48]=Shell_1
+szSN[49]=Shell_2
+szSN[50]=Shell_3
 
 [Macro]
 nMacroCancelTimer=10
