--- a/sakura.ini
+++ b/sakura.ini
@@ -1,319 +1,340 @@
 ﻿; sakura.ini テキストエディタ設定ファイル
 
 [MRU]
-MRUFOLDER[00]=Y:\usr\local\sakura\kwd\sh\
+MRUFOLDER[00]=Y:\usr\local\sakura\
 MRUFOLDER[00].bFavorite=0
-MRUFOLDER[01]=Y:\usr\local\sakura\keyword\
+MRUFOLDER[01]=Y:\usr\local\sakura\sakura.config\
 MRUFOLDER[01].bFavorite=0
-MRUFOLDER[02]=Y:\usr\local\sakura\kwd\html\
+MRUFOLDER[02]=Y:\usr\local\sakura\kwd\sh\
 MRUFOLDER[02].bFavorite=0
-MRUFOLDER[03]=Y:\usr\local\sakura\kwd\bat\
+MRUFOLDER[03]=Y:\usr\local\sakura\keyword\
 MRUFOLDER[03].bFavorite=0
-MRUFOLDER[04]=Y:\usr\local\sakura\kwd\VB\
+MRUFOLDER[04]=Y:\usr\local\sakura\kwd\html\
 MRUFOLDER[04].bFavorite=0
-MRUFOLDER[05]=Y:\usr\local\bin\ccore_bak2\src\
+MRUFOLDER[05]=Y:\usr\local\sakura\kwd\bat\
 MRUFOLDER[05].bFavorite=0
-MRUFOLDER[06]=Y:\usr\local\sakura\kwd\cpp\
+MRUFOLDER[06]=Y:\usr\local\sakura\kwd\VB\
 MRUFOLDER[06].bFavorite=0
-MRUFOLDER[07]=Y:\usr\local\sakura\
+MRUFOLDER[07]=Y:\usr\local\bin\ccore_bak2\src\
 MRUFOLDER[07].bFavorite=0
+MRUFOLDER[08]=Y:\usr\local\sakura\kwd\cpp\
+MRUFOLDER[08].bFavorite=0
 MRU[00].bFavorite=0
-MRU[00].nCharCode=0
+MRU[00].nCharCode=4
 MRU[00].nType=16
 MRU[00].nViewLeftCol=0
-MRU[00].nViewTopLine=14
+MRU[00].nViewTopLine=24
 MRU[00].nX=0
-MRU[00].nY=40
+MRU[00].nY=0
 MRU[00].szMark2=:0
-MRU[00].szPath=Y:\usr\local\sakura\kwd\sh\kw1_defines.kwd
+MRU[00].szPath=Y:\usr\local\sakura\default.ini
 MRU[01].bFavorite=0
-MRU[01].nCharCode=0
+MRU[01].nCharCode=4
 MRU[01].nType=16
 MRU[01].nViewLeftCol=0
-MRU[01].nViewTopLine=80
-MRU[01].nX=6
-MRU[01].nY=8
+MRU[01].nViewTopLine=0
+MRU[01].nX=34
+MRU[01].nY=42
 MRU[01].szMark2=:0
-MRU[01].szPath=Y:\usr\local\sakura\keyword\SHELL.kwd
+MRU[01].szPath=Y:\usr\local\sakura\sakura.ini
 MRU[02].bFavorite=0
-MRU[02].nCharCode=0
+MRU[02].nCharCode=4
 MRU[02].nType=16
 MRU[02].nViewLeftCol=0
-MRU[02].nViewTopLine=212
-MRU[02].nX=0
-MRU[02].nY=0
+MRU[02].nViewTopLine=0
+MRU[02].nX=32
+MRU[02].nY=11
 MRU[02].szMark2=:0
-MRU[02].szPath=Y:\usr\local\sakura\keyword\tsql.kwd
+MRU[02].szPath=Y:\usr\local\sakura\sakura.config\sakura.ini
 MRU[03].bFavorite=0
 MRU[03].nCharCode=0
 MRU[03].nType=16
 MRU[03].nViewLeftCol=0
-MRU[03].nViewTopLine=300
+MRU[03].nViewTopLine=14
 MRU[03].nX=0
-MRU[03].nY=0
+MRU[03].nY=40
 MRU[03].szMark2=:0
-MRU[03].szPath=Y:\usr\local\sakura\keyword\CSS2.input.kwd
+MRU[03].szPath=Y:\usr\local\sakura\kwd\sh\kw1_defines.kwd
 MRU[04].bFavorite=0
 MRU[04].nCharCode=0
 MRU[04].nType=16
 MRU[04].nViewLeftCol=0
-MRU[04].nViewTopLine=373
-MRU[04].nX=2
-MRU[04].nY=398
+MRU[04].nViewTopLine=80
+MRU[04].nX=6
+MRU[04].nY=8
 MRU[04].szMark2=:0
-MRU[04].szPath=Y:\usr\local\sakura\keyword\css2.1.kwd
+MRU[04].szPath=Y:\usr\local\sakura\keyword\SHELL.kwd
 MRU[05].bFavorite=0
 MRU[05].nCharCode=0
 MRU[05].nType=16
 MRU[05].nViewLeftCol=0
-MRU[05].nViewTopLine=400
-MRU[05].nX=5
-MRU[05].nY=411
+MRU[05].nViewTopLine=212
+MRU[05].nX=0
+MRU[05].nY=0
 MRU[05].szMark2=:0
-MRU[05].szPath=Y:\usr\local\sakura\keyword\JavaScript.kwd
+MRU[05].szPath=Y:\usr\local\sakura\keyword\tsql.kwd
 MRU[06].bFavorite=0
-MRU[06].nCharCode=4
+MRU[06].nCharCode=0
 MRU[06].nType=16
 MRU[06].nViewLeftCol=0
-MRU[06].nViewTopLine=0
-MRU[06].nX=1
-MRU[06].nY=14
+MRU[06].nViewTopLine=300
+MRU[06].nX=0
+MRU[06].nY=0
 MRU[06].szMark2=:0
-MRU[06].szPath=Y:\usr\local\sakura\keyword\html5.kwd
+MRU[06].szPath=Y:\usr\local\sakura\keyword\CSS2.input.kwd
 MRU[07].bFavorite=0
-MRU[07].nCharCode=4
+MRU[07].nCharCode=0
 MRU[07].nType=16
 MRU[07].nViewLeftCol=0
-MRU[07].nViewTopLine=0
-MRU[07].nX=6
-MRU[07].nY=18
+MRU[07].nViewTopLine=373
+MRU[07].nX=2
+MRU[07].nY=398
 MRU[07].szMark2=:0
-MRU[07].szPath=Y:\usr\local\sakura\kwd\html\kw1_defines.kwd
+MRU[07].szPath=Y:\usr\local\sakura\keyword\css2.1.kwd
 MRU[08].bFavorite=0
 MRU[08].nCharCode=0
 MRU[08].nType=16
 MRU[08].nViewLeftCol=0
-MRU[08].nViewTopLine=298
-MRU[08].nX=4
-MRU[08].nY=310
+MRU[08].nViewTopLine=400
+MRU[08].nX=5
+MRU[08].nY=411
 MRU[08].szMark2=:0
-MRU[08].szPath=Y:\usr\local\sakura\keyword\html.kwd
+MRU[08].szPath=Y:\usr\local\sakura\keyword\JavaScript.kwd
 MRU[09].bFavorite=0
 MRU[09].nCharCode=4
 MRU[09].nType=16
 MRU[09].nViewLeftCol=0
-MRU[09].nViewTopLine=130
-MRU[09].nX=5
-MRU[09].nY=156
+MRU[09].nViewTopLine=0
+MRU[09].nX=1
+MRU[09].nY=14
 MRU[09].szMark2=:0
-MRU[09].szPath=Y:\usr\local\sakura\kwd\html\kw2_reserved_words.kwd
+MRU[09].szPath=Y:\usr\local\sakura\keyword\html5.kwd
 MRU[10].bFavorite=0
 MRU[10].nCharCode=4
 MRU[10].nType=16
 MRU[10].nViewLeftCol=0
-MRU[10].nViewTopLine=25
-MRU[10].nX=0
-MRU[10].nY=51
+MRU[10].nViewTopLine=0
+MRU[10].nX=6
+MRU[10].nY=18
 MRU[10].szMark2=:0
-MRU[10].szPath=Y:\usr\local\sakura\kwd\html\kw3_types.kwd
+MRU[10].szPath=Y:\usr\local\sakura\kwd\html\kw1_defines.kwd
 MRU[11].bFavorite=0
-MRU[11].nCharCode=4
-MRU[11].nType=0
+MRU[11].nCharCode=0
+MRU[11].nType=16
 MRU[11].nViewLeftCol=0
-MRU[11].nViewTopLine=0
-MRU[11].nX=0
-MRU[11].nY=0
+MRU[11].nViewTopLine=298
+MRU[11].nX=4
+MRU[11].nY=310
 MRU[11].szMark2=:0
-MRU[11].szPath=Y:\usr\local\sakura\kwd\html\reg1_variables.rkw
+MRU[11].szPath=Y:\usr\local\sakura\keyword\html.kwd
 MRU[12].bFavorite=0
-MRU[12].nCharCode=0
-MRU[12].nType=0
+MRU[12].nCharCode=4
+MRU[12].nType=16
 MRU[12].nViewLeftCol=0
-MRU[12].nViewTopLine=0
-MRU[12].nX=47
-MRU[12].nY=8
+MRU[12].nViewTopLine=130
+MRU[12].nX=5
+MRU[12].nY=156
 MRU[12].szMark2=:0
-MRU[12].szPath=Y:\usr\local\sakura\kwd\bat\bat_win2k.khp
+MRU[12].szPath=Y:\usr\local\sakura\kwd\html\kw2_reserved_words.kwd
 MRU[13].bFavorite=0
-MRU[13].nCharCode=0
+MRU[13].nCharCode=4
 MRU[13].nType=16
 MRU[13].nViewLeftCol=0
-MRU[13].nViewTopLine=42
-MRU[13].nX=7
-MRU[13].nY=61
+MRU[13].nViewTopLine=25
+MRU[13].nX=0
+MRU[13].nY=51
 MRU[13].szMark2=:0
-MRU[13].szPath=Y:\usr\local\sakura\keyword\batch.kwd
+MRU[13].szPath=Y:\usr\local\sakura\kwd\html\kw3_types.kwd
 MRU[14].bFavorite=0
-MRU[14].nCharCode=0
+MRU[14].nCharCode=4
 MRU[14].nType=0
 MRU[14].nViewLeftCol=0
-MRU[14].nViewTopLine=27
+MRU[14].nViewTopLine=0
 MRU[14].nX=0
-MRU[14].nY=52
+MRU[14].nY=0
 MRU[14].szMark2=:0
-MRU[14].szPath=Y:\usr\local\sakura\kwd\bat\bat.khp
+MRU[14].szPath=Y:\usr\local\sakura\kwd\html\reg1_variables.rkw
 MRU[15].bFavorite=0
-MRU[15].nCharCode=4
-MRU[15].nType=16
+MRU[15].nCharCode=0
+MRU[15].nType=0
 MRU[15].nViewLeftCol=0
 MRU[15].nViewTopLine=0
-MRU[15].nX=0
-MRU[15].nY=0
+MRU[15].nX=47
+MRU[15].nY=8
 MRU[15].szMark2=:0
-MRU[15].szPath=Y:\usr\local\sakura\kwd\bat\kw2_reserved_words.kwd
+MRU[15].szPath=Y:\usr\local\sakura\kwd\bat\bat_win2k.khp
 MRU[16].bFavorite=0
-MRU[16].nCharCode=4
-MRU[16].nType=0
+MRU[16].nCharCode=0
+MRU[16].nType=16
 MRU[16].nViewLeftCol=0
-MRU[16].nViewTopLine=0
-MRU[16].nX=4
-MRU[16].nY=1
+MRU[16].nViewTopLine=42
+MRU[16].nX=7
+MRU[16].nY=61
 MRU[16].szMark2=:0
-MRU[16].szPath=Y:\usr\local\sakura\kwd\bat\reg1_variables.rkw
+MRU[16].szPath=Y:\usr\local\sakura\keyword\batch.kwd
 MRU[17].bFavorite=0
-MRU[17].nCharCode=4
-MRU[17].nType=16
+MRU[17].nCharCode=0
+MRU[17].nType=0
 MRU[17].nViewLeftCol=0
-MRU[17].nViewTopLine=0
-MRU[17].nX=11
-MRU[17].nY=9
+MRU[17].nViewTopLine=27
+MRU[17].nX=0
+MRU[17].nY=52
 MRU[17].szMark2=:0
-MRU[17].szPath=Y:\usr\local\sakura\kwd\bat\kw1_defines.kwd
+MRU[17].szPath=Y:\usr\local\sakura\kwd\bat\bat.khp
 MRU[18].bFavorite=0
 MRU[18].nCharCode=4
 MRU[18].nType=16
 MRU[18].nViewLeftCol=0
 MRU[18].nViewTopLine=0
 MRU[18].nX=0
-MRU[18].nY=1
+MRU[18].nY=0
 MRU[18].szMark2=:0
-MRU[18].szPath=Y:\usr\local\sakura\kwd\VB\kw2_reserved_words.kwd
+MRU[18].szPath=Y:\usr\local\sakura\kwd\bat\kw2_reserved_words.kwd
 MRU[19].bFavorite=0
-MRU[19].nCharCode=0
+MRU[19].nCharCode=4
 MRU[19].nType=0
 MRU[19].nViewLeftCol=0
 MRU[19].nViewTopLine=0
-MRU[19].nX=0
-MRU[19].nY=0
+MRU[19].nX=4
+MRU[19].nY=1
 MRU[19].szMark2=:0
-MRU[19].szPath=Y:\usr\local\sakura\keyword\bat_win2k.khp
+MRU[19].szPath=Y:\usr\local\sakura\kwd\bat\reg1_variables.rkw
 MRU[20].bFavorite=0
-MRU[20].nCharCode=0
-MRU[20].nType=0
+MRU[20].nCharCode=4
+MRU[20].nType=16
 MRU[20].nViewLeftCol=0
 MRU[20].nViewTopLine=0
-MRU[20].nX=0
-MRU[20].nY=0
+MRU[20].nX=11
+MRU[20].nY=9
 MRU[20].szMark2=:0
-MRU[20].szPath=Y:\usr\local\sakura\keyword\bat.khp
+MRU[20].szPath=Y:\usr\local\sakura\kwd\bat\kw1_defines.kwd
 MRU[21].bFavorite=0
-MRU[21].nCharCode=0
+MRU[21].nCharCode=4
 MRU[21].nType=16
 MRU[21].nViewLeftCol=0
-MRU[21].nViewTopLine=8
+MRU[21].nViewTopLine=0
 MRU[21].nX=0
-MRU[21].nY=0
+MRU[21].nY=1
 MRU[21].szMark2=:0
-MRU[21].szPath=Y:\usr\local\sakura\keyword\vb_asp.kwd
+MRU[21].szPath=Y:\usr\local\sakura\kwd\VB\kw2_reserved_words.kwd
 MRU[22].bFavorite=0
-MRU[22].nCharCode=4
-MRU[22].nType=16
+MRU[22].nCharCode=0
+MRU[22].nType=0
 MRU[22].nViewLeftCol=0
-MRU[22].nViewTopLine=61
-MRU[22].nX=7
-MRU[22].nY=86
+MRU[22].nViewTopLine=0
+MRU[22].nX=0
+MRU[22].nY=0
 MRU[22].szMark2=:0
-MRU[22].szPath=Y:\usr\local\sakura\kwd\VB\kw1_defines.kwd
+MRU[22].szPath=Y:\usr\local\sakura\keyword\bat_win2k.khp
 MRU[23].bFavorite=0
 MRU[23].nCharCode=0
-MRU[23].nType=16
+MRU[23].nType=0
 MRU[23].nViewLeftCol=0
 MRU[23].nViewTopLine=0
-MRU[23].nX=3
-MRU[23].nY=31
+MRU[23].nX=0
+MRU[23].nY=0
 MRU[23].szMark2=:0
-MRU[23].szPath=Y:\usr\local\sakura\keyword\VBScript.kwd
+MRU[23].szPath=Y:\usr\local\sakura\keyword\bat.khp
 MRU[24].bFavorite=0
 MRU[24].nCharCode=0
 MRU[24].nType=16
 MRU[24].nViewLeftCol=0
-MRU[24].nViewTopLine=121
+MRU[24].nViewTopLine=8
 MRU[24].nX=0
-MRU[24].nY=128
+MRU[24].nY=0
 MRU[24].szMark2=:0
-MRU[24].szPath=Y:\usr\local\sakura\keyword\VB.KWD
+MRU[24].szPath=Y:\usr\local\sakura\keyword\vb_asp.kwd
 MRU[25].bFavorite=0
-MRU[25].nCharCode=0
+MRU[25].nCharCode=4
 MRU[25].nType=16
 MRU[25].nViewLeftCol=0
-MRU[25].nViewTopLine=174
-MRU[25].nX=4
-MRU[25].nY=202
+MRU[25].nViewTopLine=61
+MRU[25].nX=7
+MRU[25].nY=86
 MRU[25].szMark2=:0
-MRU[25].szPath=Y:\usr\local\sakura\keyword\vb2.kwd
+MRU[25].szPath=Y:\usr\local\sakura\kwd\VB\kw1_defines.kwd
 MRU[26].bFavorite=0
-MRU[26].nCharCode=4
-MRU[26].nType=2
+MRU[26].nCharCode=0
+MRU[26].nType=16
 MRU[26].nViewLeftCol=0
-MRU[26].nViewTopLine=672
-MRU[26].nX=5
-MRU[26].nY=623
+MRU[26].nViewTopLine=0
+MRU[26].nX=3
+MRU[26].nY=31
 MRU[26].szMark2=:0
-MRU[26].szPath=Y:\usr\local\bin\ccore_bak2\src\ccore.cpp
+MRU[26].szPath=Y:\usr\local\sakura\keyword\VBScript.kwd
 MRU[27].bFavorite=0
-MRU[27].nCharCode=4
+MRU[27].nCharCode=0
 MRU[27].nType=16
 MRU[27].nViewLeftCol=0
-MRU[27].nViewTopLine=8
-MRU[27].nX=6
-MRU[27].nY=25
+MRU[27].nViewTopLine=121
+MRU[27].nX=0
+MRU[27].nY=128
 MRU[27].szMark2=:0
-MRU[27].szPath=Y:\usr\local\sakura\kwd\cpp\kw3_types.kwd
+MRU[27].szPath=Y:\usr\local\sakura\keyword\VB.KWD
 MRU[28].bFavorite=0
-MRU[28].nCharCode=4
+MRU[28].nCharCode=0
 MRU[28].nType=16
 MRU[28].nViewLeftCol=0
-MRU[28].nViewTopLine=57
-MRU[28].nX=0
-MRU[28].nY=0
+MRU[28].nViewTopLine=174
+MRU[28].nX=4
+MRU[28].nY=202
 MRU[28].szMark2=:0
-MRU[28].szPath=Y:\usr\local\sakura\kwd\cpp\cpp.ini
+MRU[28].szPath=Y:\usr\local\sakura\keyword\vb2.kwd
 MRU[29].bFavorite=0
 MRU[29].nCharCode=4
-MRU[29].nType=0
+MRU[29].nType=2
 MRU[29].nViewLeftCol=0
-MRU[29].nViewTopLine=0
-MRU[29].nX=0
-MRU[29].nY=0
+MRU[29].nViewTopLine=672
+MRU[29].nX=5
+MRU[29].nY=623
 MRU[29].szMark2=:0
-MRU[29].szPath=Y:\usr\local\sakura\sakura.keywordset.csv
+MRU[29].szPath=Y:\usr\local\bin\ccore_bak2\src\ccore.cpp
 MRU[30].bFavorite=0
 MRU[30].nCharCode=4
 MRU[30].nType=16
 MRU[30].nViewLeftCol=0
-MRU[30].nViewTopLine=0
-MRU[30].nX=0
-MRU[30].nY=0
+MRU[30].nViewTopLine=8
+MRU[30].nX=6
+MRU[30].nY=25
 MRU[30].szMark2=:0
-MRU[30].szPath=Y:\usr\local\sakura\sakura.ini
+MRU[30].szPath=Y:\usr\local\sakura\kwd\cpp\kw3_types.kwd
+MRU[31].bFavorite=0
+MRU[31].nCharCode=4
+MRU[31].nType=16
+MRU[31].nViewLeftCol=0
+MRU[31].nViewTopLine=57
+MRU[31].nX=0
+MRU[31].nY=0
+MRU[31].szMark2=:0
+MRU[31].szPath=Y:\usr\local\sakura\kwd\cpp\cpp.ini
+MRU[32].bFavorite=0
+MRU[32].nCharCode=4
+MRU[32].nType=0
+MRU[32].nViewLeftCol=0
+MRU[32].nViewTopLine=0
+MRU[32].nX=0
+MRU[32].nY=0
+MRU[32].szMark2=:0
+MRU[32].szPath=Y:\usr\local\sakura\sakura.keywordset.csv
 _ExceptMRU_Counts=0
-_MRUFOLDER_Counts=8
-_MRU_Counts=31
+_MRUFOLDER_Counts=9
+_MRU_Counts=33
 
 [Keys]
 REPLACEKEY[00]=\r\n
 REPLACEKEY[01]=
-SEARCHKEY[00]=GOTO
-SEARCHKEY[01]=START
-SEARCHKEY[02]=,
-SEARCHKEY[03]= ///.*
-SEARCHKEY[04]=Sub
-SEARCHKEY[05]=size
-SEARCHKEY[06]=std
-SEARCHKEY[07]=if\(
-SEARCHKEY[08]=if
+SEARCHKEY[00]=Folders
+SEARCHKEY[01]=GOTO
+SEARCHKEY[02]=START
+SEARCHKEY[03]=,
+SEARCHKEY[04]= ///.*
+SEARCHKEY[05]=Sub
+SEARCHKEY[06]=size
+SEARCHKEY[07]=std
+SEARCHKEY[08]=if\(
+SEARCHKEY[09]=if
 _REPLACEKEY_Counts=2
-_SEARCHKEY_Counts=9
+_SEARCHKEY_Counts=10
 
 [Grep]
 GREPFILE[00]=*.*
@@ -984,7 +1005,7 @@ KeyBind[078]=0053,0,0,30103,30104,0,0,31142,0,S
 KeyBind[079]=0054,0,0,30940,30941,0,0,31332,0,T
 KeyBind[080]=0055,0,0,30240,30242,0,0,31140,0,U
 KeyBind[081]=0056,0,0,30604,0,0,0,0,0,V
-KeyBind[082]=0057,0,0,30400,0,0,0,31143,0,W
+KeyBind[082]=0057,0,0,31320,0,0,0,31143,0,W
 KeyBind[083]=0058,0,0,30601,0,0,0,31141,0,X
 KeyBind[084]=0059,0,0,30211,0,0,0,0,0,Y
 KeyBind[085]=005a,0,0,30210,0,0,0,0,0,Z
